--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.12"
 dependencies = [
+    "matplotlib>=3.10.3",
     "pandas==2.2.3",
+    "seaborn>=0.13.2",
 ]
