--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 ### Project Custom
 temp
+insertion_sort
+merge_sort
+quick_sort
+selection_sort
 
 ### PyCharm+iml template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
