--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 requires-python = ">=3.12"
 dependencies = [
     "matplotlib>=3.10.3",
-    "pandas==2.2.3",
+    "pandas==2.3.0",
+    "scikit-learn>=1.6.1",
     "seaborn>=0.13.2",
 ]
