--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ requires-python = ">=3.12"
 dependencies = [
     "matplotlib>=3.10.3",
     "pandas==2.3.0",
+    "pandas-stubs==2.2.3.250527",
     "scikit-learn>=1.6.1",
     "seaborn>=0.13.2",
 ]
